<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="settings">Settings</string>
    <string name="send_button_label">Send</string>

    <string name="message">hi man, how are you?</string>

    <string name="log_out">Logout</string>

    <string name="username">Username</string>

    <string name="last_message">Last message</string>
    <string name="last_message_time">Time</string>

    <string name="now_online">Now online</string>
    <string name="last_seen">Last seen\ </string>
    <string name="moment_ago">A moment ago</string>
    <string name="minute">\ minute</string>
    <string name="hour">\ hour</string>
    <string name="day">\ day</string>
    <string name="plural">s</string>
    <string name="ago">\ ago</string>

    <string name="send">Send</string>
    <string name="browse_photos">Browse photos</string>
    <string name="enter_text">Enter text to send</string>

    <string name="couldnt_login">Couldn\'t login</string>
    <string name="avatar_picture">Avatar picture</string>
    <string name="new_user_requests">You\'ve got new user requests</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="settings_notifications">Notifications and sounds</string>
    <string name="setting_notifications_description">Do you want to receive notifications ?</string>

    <string name="settings_color">Chat color</string>
    <string name="settings_pseudonym">Change pseudonym</string>
    <string name="settings_name">Change conversation name</string>
    <string name="settings_confirm">Confirm</string>
    <string name="settings_original">Original</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_details">Details</string>

</resources>
